fix RWD overflow bug

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -18,8 +18,8 @@ $White: #FFFFFF;
 }
 
 body {
-    overflow: hidden;
-    max-width: 100vw;
+//    overflow: hidden;
+//    max-width: 100vw;
 }
 
 %link {
